# modbus_server_simulator

./: .gitattributes  .gitignore  CLAUDE.md  README.md  appversion.py  build.py  build_client.bat  build_exe.bat  build_server.bat  modbus_client_sim.py  modbus_server_sim.py  modbus_tcp_client.py  modbus_tcp_client_build.bat  modbus_tcp_client_version.txt  modbus_tcp_server.py  modbus_tcp_server_build.bat  modbus_tcp_server_version.txt  pyproject.toml  requirements.txt
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-06-25-modbus-sequence-simulation.md
docs/superpowers/specs/: 2026-06-25-modbus-sequence-simulation-design.md
packaging/linux/: build_deb.sh
packaging/windows/: installer.iss
resources/: default_sequence.json  style.qss
sequence/: __init__.py  sequence_editor.py  sequence_engine.py  sequence_model.py  sequence_window.py
tests/: conftest.py  test_runtime_data_dir.py  test_sequence_editor_layout.py  test_sequence_engine.py  test_sequence_gui_smoke.py  test_sequence_model.py
