[project]
name = "modbus-tcp-simulator"
version = "1.0.0"
description = "Modbus TCP 서버/클라이언트 시뮬레이터 (PySide6 GUI)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # pymodbus 3.10+ 에서 datastore API(ModbusSlaveContext 등)가 변경되어
    # 현재 코드와 호환되지 않으므로 검증된 3.9.x 로 고정한다.
    "pymodbus>=3.9.2,<3.10",
    "PySide6==6.9.1",
]

[dependency-groups]
# exe 빌드용 도구 (uv sync 시 함께 설치됨). 실행에는 불필요.
dev = [
    "pyinstaller>=6.14.1",
    "pytest>=9.1.1",
]

[tool.uv]
# 평면(flat) 스크립트 구조이므로 패키지로 빌드하지 않고 앱처럼 실행만 한다.
# 그래도 위 dependencies 는 `uv run`/`uv sync` 시 .venv 에 모두 설치된다.
package = false
